--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -84,6 +84,7 @@
   <string name="ClearProfileActivity_remove_profile_photo">Odebrat profilovou fotografii?</string>
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">Nebyl nalezen žádný webový prohlížeč.</string>
+  <string name="CommunicationActions_a_cellular_call_is_already_in_progress">Telefonní hovor právě probíhá</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Váš bezpečnostní kód pro %1$s se změnil. To může znamenat, že se někdo pokouší zachytit vaši konverzaci, nebo jen že si %2$s přeinstaloval Signal.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Možná budete chtít zkontrolovat vaše bezpečnostní kódy pro tento kontakt.</string>
@@ -167,6 +168,8 @@
   <string name="ConversationActivity_no">Ne</string>
   <string name="ConversationActivity_search_position">%1$d z %2$d</string>
   <string name="ConversationActivity_no_results">Žádné výsledky.</string>
+  <string name="ConversationActivity_sticker_pack_installed">Balíček nálepek nainstalován</string>
+  <string name="ConversationActivity_new_say_it_with_stickers">Novinka! Řekněte to nálepkou</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one">%d nepřečtená zpráva</item>
@@ -591,6 +594,7 @@ telefonní číslo</string>
   <string name="SharedContactView_message">Zpráva Signal</string>
   <!--Slide-->
   <string name="Slide_image">Obrázek</string>
+  <string name="Slide_sticker">Nálepka</string>
   <string name="Slide_audio">Audio</string>
   <string name="Slide_video">Video</string>
   <!--SmsMessageRecord-->
@@ -601,14 +605,24 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.</string>
   <string name="SmsMessageRecord_secure_session_reset">Resetujete zabezpečenou konverzaci</string>
   <string name="SmsMessageRecord_secure_session_reset_s">%s resetuje zabezpečenou konverzaci</string>
   <string name="SmsMessageRecord_duplicate_message">Duplicitní zpráva</string>
+  <string name="SmsMessageRecord_this_message_could_not_be_processed_because_it_was_sent_from_a_newer_version">Zprávu se nepodařilo zpracovat protože byla odeslána z novější verze Signal. Požádejte váš kontakt aby vám poslal zprávu znovu až provedete aktualizaci.</string>
   <!--StickerManagementActivity-->
   <string name="StickerManagementActivity_stickers">Nálepky</string>
   <!--StickerManagementAdapter-->
+  <string name="StickerManagementAdapter_installed_stickers">Instalované nálepky</string>
+  <string name="StickerManagementAdapter_stickers_you_received">Přijaté nálepky</string>
+  <string name="StickerManagementAdapter_signal_artist_series">Sbírka od výtvarníků Signal</string>
+  <string name="StickerManagementAdapter_no_stickers_installed">Nejsou instalovány žádné nálepky</string>
+  <string name="StickerManagementAdapter_stickers_from_incoming_messages_will_appear_here">Nálepky z příchozích zpráv se objeví zde</string>
+  <string name="StickerManagementAdapter_untitled">Nepojmenovaná</string>
   <string name="StickerManagementAdapter_unknown">Neznámý</string>
   <!--StickerPackPreviewActivity-->
+  <string name="StickerPackPreviewActivity_untitled">Nepojmenovaná</string>
   <string name="StickerPackPreviewActivity_unknown">Neznámý</string>
+  <string name="StickerPackPreviewActivity_install">Instalovat</string>
   <string name="StickerPackPreviewActivity_remove">Odebrat</string>
   <string name="StickerPackPreviewActivity_stickers">Nálepky</string>
+  <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">Nepodařilo se stáhnou balíček nálepek</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">Skupina upravena</string>
   <string name="ThreadRecord_left_the_group">Opustil skupinu.</string>
@@ -625,6 +639,7 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.</string>
   <string name="ThreadRecord_your_safety_number_with_s_has_changed">Váš bezpečnostní kód s %s se změnil</string>
   <string name="ThreadRecord_you_marked_verified">Označen jako ověřený</string>
   <string name="ThreadRecord_you_marked_unverified">Označen jako neověřený</string>
+  <string name="ThreadRecord_message_could_not_be_processed">Zprávu nelze zpracovat</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Aktualizace Signal</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Je k dispozici nová verze Signal, klikněte pro aktualizaci</string>
@@ -690,6 +705,7 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.</string>
   <string name="MessageNotifier_mark_all_as_read">Označit vše jako přečtené</string>
   <string name="MessageNotifier_mark_read">Označit jako přečtené</string>
   <string name="MessageNotifier_media_message">Multimediální zpráva</string>
+  <string name="MessageNotifier_sticker">Nálepka</string>
   <string name="MessageNotifier_reply">Odpověď</string>
   <string name="MessageNotifier_signal_message">Zpráva Signal</string>
   <string name="MessageNotifier_unsecured_sms">Nezabezpečená SMS</string>
@@ -814,6 +830,7 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.</string>
   <string name="QuoteView_audio">Audio</string>
   <string name="QuoteView_video">Video</string>
   <string name="QuoteView_photo">Fotografie</string>
+  <string name="QuoteView_sticker">Nálepka</string>
   <string name="QuoteView_document">Dokument</string>
   <string name="QuoteView_you">Vy</string>
   <string name="QuoteView_original_missing">Původní zpráva nebyla nalezena</string>
