--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -84,6 +84,7 @@
   <string name="ClearProfileActivity_remove_profile_photo">להסיר תצלום פרופיל?</string>
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">לא נמצא דפדפן.</string>
+  <string name="CommunicationActions_a_cellular_call_is_already_in_progress">שיחה סלולרית נמצאת כבר בתהליך.</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">מספר הביטחון שלך עם %1$s השתנה. ייתכן שזה אומר שמישהו מנסה ליירט את התקשורת שלכם או שפשוט %2$s התקין מחדש את Signal.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">ייתכן שתרצה לוודא את מספר הביטחון שלך עם איש קשר זה.</string>
@@ -168,6 +169,7 @@
   <string name="ConversationActivity_search_position">%1$d מתוך %2$d</string>
   <string name="ConversationActivity_no_results">אין תוצאות</string>
   <string name="ConversationActivity_sticker_pack_installed">חבילת מדבקות הותקנה</string>
+  <string name="ConversationActivity_new_say_it_with_stickers">חדש! אמור זאת עם מדבקות</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one">הודעה %d לא נקראה</item>
@@ -605,6 +607,7 @@
   <string name="SmsMessageRecord_secure_session_reset">איפסת את השיח המאובטח.</string>
   <string name="SmsMessageRecord_secure_session_reset_s">ההתחברות המאובטחת אותחלה על־ידי %s.</string>
   <string name="SmsMessageRecord_duplicate_message">הודעה כפולה.</string>
+  <string name="SmsMessageRecord_this_message_could_not_be_processed_because_it_was_sent_from_a_newer_version">הודעה זו לא יכלה להיות מעובדת מאחר שהיא נשלחה מגרסה חדשה יותר של Signal. אתה יכול לבקש מאיש הקשר שלך לשלוח הודעה זו שוב לאחר שתעדכן.</string>
   <!--StickerManagementActivity-->
   <string name="StickerManagementActivity_stickers">מדבקות</string>
   <!--StickerManagementAdapter-->
@@ -613,12 +616,15 @@
   <string name="StickerManagementAdapter_signal_artist_series">סדרת אומנים Signal</string>
   <string name="StickerManagementAdapter_no_stickers_installed">אין מדבקות מותקנות</string>
   <string name="StickerManagementAdapter_stickers_from_incoming_messages_will_appear_here">מדבקות מהודעות נכנסות יופיעו כאן</string>
+  <string name="StickerManagementAdapter_untitled">ללא כותרת</string>
   <string name="StickerManagementAdapter_unknown">לא ידוע</string>
   <!--StickerPackPreviewActivity-->
+  <string name="StickerPackPreviewActivity_untitled">ללא כותרת</string>
   <string name="StickerPackPreviewActivity_unknown">לא ידוע</string>
   <string name="StickerPackPreviewActivity_install">התקן</string>
   <string name="StickerPackPreviewActivity_remove">הסר</string>
   <string name="StickerPackPreviewActivity_stickers">מדבקות</string>
+  <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">נכשל בטעינת חבילת מדבקות</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">הקבוצה עודכנה</string>
   <string name="ThreadRecord_left_the_group">עזב את הקבוצה</string>
@@ -635,6 +641,7 @@
   <string name="ThreadRecord_your_safety_number_with_s_has_changed">מספר הביטחון שלך עם %s השתנה.</string>
   <string name="ThreadRecord_you_marked_verified">סימנת כמוודא</string>
   <string name="ThreadRecord_you_marked_unverified">סימנת כבלתי מוודא</string>
+  <string name="ThreadRecord_message_could_not_be_processed">ההודעה לא יכלה להיות מעובדת.</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">עדכון Signal</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">גרסה חדשה של Signal זמינה, הקש כדי לעדכן</string>
