--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -607,9 +607,7 @@
   <string name="SmsMessageRecord_secure_session_reset">Вы сбросили защищенный сеанс.</string>
   <string name="SmsMessageRecord_secure_session_reset_s">%s сбросил(а) защищенный сеанс.</string>
   <string name="SmsMessageRecord_duplicate_message">Дубликат сообщения.</string>
-  <string name="SmsMessageRecord_this_message_could_not_be_processed_because_it_was_sent_from_a_newer_version">
-        Это сообщение не удалось обработать, поскольку оно было отправлено из более новой версии Signal. Вы можете попросить своего контакта снова отправить это сообщение после того, как вы обновите Signal.
-    </string>
+  <string name="SmsMessageRecord_this_message_could_not_be_processed_because_it_was_sent_from_a_newer_version">Это сообщение не удалось обработать, поскольку оно было отправлено из более новой версии Signal. Вы можете попросить своего контакта снова отправить это сообщение после того, как вы обновите Signal.</string>
   <!--StickerManagementActivity-->
   <string name="StickerManagementActivity_stickers">Стикеры</string>
   <!--StickerManagementAdapter-->
