--- a/res/values-sq/strings.xml
+++ b/res/values-sq/strings.xml
@@ -569,9 +569,7 @@
   <string name="SmsMessageRecord_secure_session_reset">E kthyet te parazgjedhjet sesionin e sigurt.</string>
   <string name="SmsMessageRecord_secure_session_reset_s">%s e ktheu te parazgjedhjet sesionin e sigurt.</string>
   <string name="SmsMessageRecord_duplicate_message">Mesazh i përsëdytur.</string>
-  <string name="SmsMessageRecord_this_message_could_not_be_processed_because_it_was_sent_from_a_newer_version">
-        Ky mesazh s’u përpunua dot, ngaqë qe dërguar prej një versioni më të ri Signal-i. Mund t’i kërkoni kontaktit tuaj ta ridërgojë këtë mesazh, pasi ta përditësoni.
-    </string>
+  <string name="SmsMessageRecord_this_message_could_not_be_processed_because_it_was_sent_from_a_newer_version">Ky mesazh s’u përpunua dot, ngaqë qe dërguar prej një versioni më të ri Signal-i. Mund t’i kërkoni kontaktit tuaj ta ridërgojë këtë mesazh, pasi ta përditësoni.</string>
   <!--StickerManagementActivity-->
   <string name="StickerManagementActivity_stickers">Ngjitëse</string>
   <!--StickerManagementAdapter-->
