Do not show contact address in subtitle.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -266,6 +266,9 @@
     <!-- ConversationListItemAction -->
     <string name="ConversationListItemAction_archived_conversations_d">Archived conversations (%d)</string>
 
+    <!-- ConversationTitleView -->
+    <string name="ConversationTitleView_verified">Verified</string>
+
     <!-- CreateProfileActivity -->
     <string name="CreateProfileActivity_your_profile_info">Your profile info</string>
     <string name="CreateProfileActivity_error_setting_profile_photo">Error setting profile photo</string>
